tests/invalid/type/unknown_local_variable.pts
function main() : void {
  int a = missingValue;
}
